[package]
edition = "2021"
name = "rs-scraper"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.3", default-features = false, features = ["napi4"] }
napi-derive = "2.3.3"
scraper = "0.12.0"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
